...
        view.backgroundColor = .black
        
        self.navigationController?.navigationBar.barStyle = .black
        self.navigationController?.navigationBar.isTranslucent = false
        self.navigationController?.navigationItem.largeTitleDisplayMode = .automatic
        self.navigationController!.navigationBar.titleTextAttributes = [.foregroundColor: UIColor.white]
        self.title = "Movie App"
        
        
        searchController.searchBar.delegate = self
        self.navigationItem.searchController = searchController
        
        centerLabel.translatesAutoresizingMaskIntoConstraints = false
...
